M    toolkit/src/main/resources/toolkit/xsd/cmd-component.xsd M    toolkit/src/main/resources/toolkit/upgrade/cmd-component-1_1-to-1_2.xsl M    toolkit/src/main/resources/toolkit/downgrade/cmd-component-1_2-to-1_1.xsl - added @CMDVersion and @CMDOriginalVersion
M    toolkit/src/test/resources/toolkit/CMD/profiles/components-invalid.xml
M    toolkit/src/test/resources/toolkit/successor/profiles/successor-valid.xml
M    toolkit/src/test/resources/toolkit/successor/profiles/successor-invalid.xml
M    toolkit/src/test/resources/toolkit/Adelheid/profiles/clarin.eu:cr1:p_1311927752306_1_2.xml
- added @CMDVersion="1.2"

AM   toolkit/src/test/resources/temp/general-component-schema.xsd
- temporary CMDI 1.1 component schema containing the xsl:key optimization
-> speeds up the CMDI 1.2 downgrade tests

M    toolkit/src/main/resources/toolkit/upgrade/cmd-record-1_1-to-1_2.xsl
- check if the profile is native CMD 1.2 so we need to refer to the 1.1/1.2/xsd
- for testing purposes the profile spec can also be passed as a parameter, if not its fetched from the CR
- the XPaths dealing with the profiles cope with both 1.1 and 1.2

M    toolkit/src/test/java/eu/clarin/cmd/toolkit/TestCMDToolkit.java
- pass on the profile spec to the upgrade record actions
- use the temporary 1.1 general-component-schema.xsd for the downgrade tests