@@ -59,8 +59,9 @@ public class TestCMDToolkit {
             downgradeCMDSpec = SaxonUtils.buildTransformer(CMDToolkit.class.getResource("/toolkit/downgrade/cmd-component-1_2-to-1_1.xsl")).load();
             upgradeCMDRec = SaxonUtils.buildTransformer(CMDToolkit.class.getResource("/toolkit/upgrade/cmd-record-1_1-to-1_2.xsl")).load();
             transformCMDSpecInXSD = SaxonUtils.buildTransformer(CMDToolkit.class.getResource("/toolkit/xslt/comp2schema.xsl")).load();
-            validateCMDSpec = new SchemAnon(CMDToolkit.class.getResource("/toolkit/xsd/cmd-component.xsd").toURI().toURL());            
-            validateCMDoldSpec = new SchemAnon(new URL("http://infra.clarin.eu/cmd/general-component-schema.xsd"));
+            validateCMDSpec = new SchemAnon(CMDToolkit.class.getResource("/toolkit/xsd/cmd-component.xsd").toURI().toURL());
+            //validateCMDoldSpec = new SchemAnon(new URL("http://infra.clarin.eu/cmd/general-component-schema.xsd"));
+            validateCMDoldSpec = new SchemAnon(TestCMDToolkit.class.getResource("/temp/general-component-schema.xsd").toURI().toURL());
             validateCMDEnvelop = new SchemAnon(CMDToolkit.class.getResource("/toolkit/xsd/cmd-envelop.xsd").toURI().toURL());
         } catch(Exception e) {
             System.err.println("!ERR: couldn't setup the testing environment!");
@@ -73,7 +74,7 @@ public class TestCMDToolkit {
     public void tearDown() {
     }
 
-    protected Document transform(XsltTransformer trans,Source src) throws Exception {
+    protected Document transform(XsltTransformer trans,Source src,Map<String,XdmValue> params) throws Exception {
         try {
             DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
             DocumentBuilder builder = factory.newDocumentBuilder();
@@ -83,6 +84,9 @@ public class TestCMDToolkit {
             trans.setDestination(dest);
             // always set cmd-toolkit to the current working directory, which is expected to be where pom.xml lives
             trans.setParameter(new QName("cmd-toolkit"),new XdmAtomicValue(Paths.get("").toAbsolutePath().toString()+"/src/main/resources/toolkit"));
+            if (params!=null)
+                for(String param:params.keySet())
+                    trans.setParameter(new QName(param),params.get(param));
             trans.transform();
             return doc;
         } catch (Exception e) {
@@ -90,6 +94,10 @@ public class TestCMDToolkit {
             e.printStackTrace(System.out);
             throw e;
         }
+    }
+
+    protected Document transform(XsltTransformer trans,Source src) throws Exception {
+        return transform(trans,src,null);
     }
 
     protected boolean xpath(Document doc,String xpath) throws Exception {
@@ -130,9 +138,11 @@ public class TestCMDToolkit {
         return transform(downgradeCMDSpec,src);
     }
 
-    protected Document upgradeCMDRecord(String rec) throws Exception {
+    protected Document upgradeCMDRecord(String rec,Document prof) throws Exception {
         System.out.println("Upgrade CMD spec["+rec+"]");
-        return transform(upgradeCMDRec,new javax.xml.transform.stream.StreamSource(new java.io.File(TestCMDToolkit.class.getResource(rec).toURI())));
+        Map<String,XdmValue> params = new HashMap<String,XdmValue>();
+        params.put("cmd-profile", SaxonUtils.getProcessor().newDocumentBuilder().wrap(prof));
+        return transform(upgradeCMDRec,new javax.xml.transform.stream.StreamSource(new java.io.File(TestCMDToolkit.class.getResource(rec).toURI())),params);
     }
 
     protected Document transformCMDSpecInXSD(String spec,Source src) throws Exception {
@@ -183,7 +193,7 @@ public class TestCMDToolkit {
     protected boolean validateCMDEnvelop(String rec) throws Exception {
         return validateCMDEnvelop(rec,new StreamSource(new java.io.File(TestCMDToolkit.class.getResource(rec).toURI())));
     }
-
+    
     @Test
     public void testAdelheid() throws Exception {
         String profile = "/toolkit/Adelheid/profiles/clarin.eu:cr1:p_1311927752306.xml";
@@ -206,7 +216,7 @@ public class TestCMDToolkit {
         SchemAnon profileAnon = new SchemAnon(new DOMSource(profileSchema));
 
         // upgrade the record from 1.1 to 1.2
-        Document upgradedRecord = upgradeCMDRecord(record);
+        Document upgradedRecord = upgradeCMDRecord(record,upgradedProfile);
 
         // validate the 1.2 record
         boolean validRecord = validateCMDRecord(profile+" (upgraded)",profileAnon,record+" (upgraded)",new DOMSource(upgradedRecord));
@@ -289,7 +299,7 @@ public class TestCMDToolkit {
         SchemAnon profileAnon = new SchemAnon(new DOMSource(profileSchema));
 
         // upgrade the record from 1.1 to 1.2
-        Document upgradedRecord = upgradeCMDRecord(record);
+        Document upgradedRecord = upgradeCMDRecord(record,upgradedProfile);
 
         // validate the 1.2 record
         boolean validRecord = validateCMDRecord(profile+" (upgraded)", profileAnon, record+" (upgraded)", new DOMSource(upgradedRecord));
@@ -316,10 +326,14 @@ public class TestCMDToolkit {
 
     @Test
     public void testTEI() throws Exception {
+        String profile = "/toolkit/TEI/profiles/clarin.eu:cr1:p_1380106710826.xml";
         String record  = "/toolkit/TEI/records/sundhed_dsn.teiHeader.ref.xml";
 
+        // upgrade the profile from 1.1 to 1.2
+        Document upgradedProfile = upgradeCMDSpec(profile);
+
         // upgrade the record from 1.1 to 1.2
-        Document upgradedRecord = upgradeCMDRecord(record);
+        Document upgradedRecord = upgradeCMDRecord(record,upgradedProfile);
 
         // assertions
         // the @ref attributes on the elements should stay as they are
@@ -352,13 +366,13 @@ public class TestCMDToolkit {
         assertTrue(validProfile);
         // so there should be no errors
         assertEquals(0, countErrors(validateCMDSpec));
-
+        
         // transform the 1.2 profile into a XSD
         Document profileSchema = transformCMDSpecInXSD(profile+" (upgraded)",new DOMSource(upgradedProfile));
         SchemAnon profileAnon = new SchemAnon(new DOMSource(profileSchema));
 
         // upgrade the record from 1.1 to 1.2
-        Document upgradedRecord = upgradeCMDRecord(record);
+        Document upgradedRecord = upgradeCMDRecord(record,upgradedProfile);
 
         // validate the 1.2 record
         boolean validRecord = validateCMDRecord(profile+" (upgraded)",profileAnon,record+" (upgraded)",new DOMSource(upgradedRecord));
